--- a/css/style.css
+++ b/css/style.css
@@ -948,13 +948,15 @@ img
     min-height: 100vh;
     background-color: var(--black-100);
 }
+
 .contact-section .contact-item
 {
-    flex: 0 0 33.33%;
+    /* flex: 0 0 33.33%; */
     max-width: 33.33%;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
+    margin: 1px auto;
 }
 .contact-section .contact-item-inner
 {
